--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,15 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express-jwt": "^8.4.1",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
